--- a/src/app/lab/Research_Centre_For_Asset_Performance/RCFAP.component.html
+++ b/src/app/lab/Research_Centre_For_Asset_Performance/RCFAP.component.html
@@ -4,7 +4,7 @@
 
   <!-- Section 1: Image left, content right -->
   <section class="im-section">
-    <img src="assets/labs/IOT/System architecture.jpg" alt="CPEA Lab Overview">
+    <img src="assets/labs/IOT/asset1.jpg" alt="CPEA Lab Overview">
     <div class="im-content">
       <h2>Overview</h2>
       <p>
@@ -15,7 +15,7 @@
 
   <!-- Section 2: Image right, content left -->
   <section class="im-section reverse">
-    <img src="assets/labs/IOT/Picture2.jpg" alt="RCFAP Lab Services">
+    <img src="assets/labs/IOT/asset2.jpg" alt="RCFAP Lab Services">
     <div class="im-content">
       <h2>Services Offered</h2>
       <ul>
@@ -28,7 +28,7 @@
 
   <!-- Section 3: Competency & Skills -->
   <section class="im-section section-3">
-    <img src="assets/labs/IOT/Picture3.jpg" alt="RCFAP Skills">
+    <img src="assets/labs/IOT/asset3.jpeg" alt="RCFAP Skills">
     <div class="im-content">
       <h2>Competency & Skills</h2>
       <ul>
